--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -5,5 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/app.css">
 </head>
 <body>
+
+<script src="/scripts/app.js"></script>
 </body>
 </html>
