[feature] add basic bootstrap page markup

--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
   	<meta charset="UTF-8">
+	<title>Formula 1 - Race Statistics</title>
 	<link rel="stylesheet" type="text/css" href="styles/app.css">
 </head>
 <body>
-
+<div class="container-fluid">
+	<div class="page-header">
+		<h1>Formula 1<small>Statistics</small></h1>
+	</div>
+	<div class="row">
+		<ul id="nav" class="nav nav-pills nav-stacked col-sm-2">
+			<li><a href="/home">Home</a></li>
+			<li><a href="#">Constructors</a></li>
+			<li><a href="#">Drivers</a></li>
+			<li><a href="#">Results</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+		<div id="content" class="col-sm-9"></div>
+	</div>
+</div>
 <script src="/scripts/app.js"></script>
 </body>
 </html>
