--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -13,8 +13,8 @@
 	<div class="row">
 		<ul id="nav" class="nav nav-pills nav-stacked col-sm-2">
 			<li><a href="/home">Home</a></li>
-			<li><a href="#">Constructors</a></li>
-			<li><a href="#">Drivers</a></li>
+			<li><a href="">Constructors</a></li>
+			<li><a href="/drivers">Drivers</a></li>
 			<li><a href="#">Results</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
