--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -18,7 +18,7 @@
 			<li><a href="#">Results</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
-		<div id="content" class="col-sm-9"></div>
+		<div id="content" class="col-sm-offset-1 col-sm-9"></div>
 	</div>
 </div>
 <script src="/scripts/app.js"></script>
