[bugfix] fix bug in routes

--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -13,10 +13,10 @@
 	<div class="row">
 		<ul id="nav" class="nav nav-pills nav-stacked col-sm-2">
 			<li><a href="/home">Home</a></li>
-			<li><a href="">Constructors</a></li>
+			<li><a href="/constructors">Constructors</a></li>
 			<li><a href="/drivers">Drivers</a></li>
-			<li><a href="#">Results</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="/results">Results</a></li>
+			<li><a href="/contact">Contact</a></li>
 		</ul>
 		<div id="content" class="col-sm-offset-1 col-sm-9"></div>
 	</div>
