--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -15,7 +15,8 @@
 			<li><a href="/home">Home</a></li>
 			<li><a href="/constructors">Constructors</a></li>
 			<li><a href="/drivers">Drivers</a></li>
-			<li><a href="/results">Results</a></li>
+			<li><a href="/races">Races</a></li>
+			<li><a href="/circuits">Circuits</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
 		<div id="content" class="col-sm-offset-1 col-sm-9"></div>
