[feature] rebuild application with github stats instead of Formula1 stats

--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -2,26 +2,24 @@
 <html lang="en">
 <head>
   	<meta charset="UTF-8">
-	<title>Formula 1 - Race Statistics</title>
-	<link rel="stylesheet" type="text/css" href="styles/app.css">
+	<title>Github - Profile Information</title>
+	<link rel="stylesheet" type="text/css" href="/assets/styles/app.css">
 </head>
 <body>
 <div class="container-fluid">
 	<div class="page-header">
-		<h1>Formula 1<small>Statistics</small></h1>
+		<h1>Github<small> - Profile Information</small></h1>
 	</div>
 	<div class="row">
 		<ul id="nav" class="nav nav-pills nav-stacked col-sm-2">
 			<li><a href="/home">Home</a></li>
-			<li><a href="/constructors">Constructors</a></li>
-			<li><a href="/drivers">Drivers</a></li>
-			<li><a href="/races">Races</a></li>
-			<li><a href="/circuits">Circuits</a></li>
+			<li><a href="/profile">Profile</a></li>
+			<li><a href="/repositories">Repositories</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
 		<div id="content" class="col-sm-offset-1 col-sm-9"></div>
 	</div>
 </div>
-<script src="/scripts/app.js"></script>
+<script src="/assets/scripts/app.js"></script>
 </body>
 </html>
