[feature] add followers page template

--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -14,6 +14,7 @@
 			<ul id="nav" class="nav nav-pills nav-stacked col-sm-2">
 				<li><a href="/home">Home</a></li>
 				<li><a href="/profile">Profile</a></li>
+				<li><a href="/followers">Followers</a></li>
 				<li><a href="/repositories">Repositories</a></li>
 				<li><a href="/contact">Contact</a></li>
 			</ul>
