[refactor] rename Github mentions to GitHub

--- a/04-dev/app/index.html
+++ b/04-dev/app/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   	<meta charset="UTF-8">
-	<title>Github - Profile Information</title>
+	<title>GitHub - Profile Information</title>
 	<link rel="stylesheet" type="text/css" href="/assets/styles/app.css">
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="page-header">
-			<h1>Github<small> - Profile Information</small></h1>
+			<h1>GitHub<small> - Profile Information</small></h1>
 		</div>
 		<div class="row">
 			<ul id="nav" class="nav nav-pills nav-stacked col-sm-2">
