--- a/06-diagrams/app/index.html
+++ b/06-diagrams/app/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>D3 – SVG, SVG, SVG…</title>
   <link rel="stylesheet" type="text/css" href="/styles/app.css">
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 </head>
 <body>
 <div class="container">
